syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.chizi.ticket";
option java_outer_classname = "TicketProto";
option objc_class_prefix = "CZT";

package ticket;

service Ticket {
  rpc HareCreateAccount (AccountRequest) returns (AccountReply) {}
  rpc HareLogin (LoginRequest) returns (LoginReply) {}
  rpc HareChangePassword (PasswordRequest) returns (LoginReply) {}
  rpc RecordTicket (TicketDetails) returns (RecordReply) {}
  rpc SubmitTicketStats (TicketStats) returns (StatsReply) {}

  rpc SlaveLocSubmit(SlaveLoc) returns (MasterOrder) {}
  rpc SlaveAnchorSubmit(SlaveLoc) returns (MasterOrder) {}

  rpc PullTicketRange (TicketRangeSid) returns (TicketRange) {}
}

message AccountRequest {
  string user_id = 1;
  string password = 2;
  string police_name = 3;
  string police_type = 4;
  string police_city = 5;
  string police_dept = 6;
  string police_station = 7;
  bytes police_portrait = 8;
}

message AccountReply {
  bool create_success = 1;
}

message LoginRequest {
  string user_id = 1;
  string password = 2;
}

message LoginReply {
  bool login_success = 1;
  string police_name = 2;
  string police_type = 3;
  string police_city = 4;
  string police_dept = 5;
  string police_squad = 6;
  string police_section = 7;
  bytes police_portrait = 8;
}

message PasswordRequest {
  string user_id = 1;
  string password = 2;
  string new_password = 3;
}

message TicketDetails {
  int64 ticket_id = 1;
  string user_id = 2;
  string license_num = 3;
  string license_color = 4;
  string vehicle_type = 5;
  string vehicle_color = 6;
  int32 year = 7;
  int32 month = 8;
  int32 day = 9;
  int32 hour = 10;
  int32 minute = 11;
  string address = 12;
  double longitude = 13;
  double latitude = 14;
  bytes map_image = 15;
  bytes far_image = 16;
  bytes close_image = 17;
  bytes ticket_image = 18;
}

message RecordReply {
  bool record_success = 1;
}

message TicketStats {
  string sid = 1;
  int32 saved_ticket_count = 2;
  int32 uploaded_ticket_count = 3;
}

message StatsReply {
  bool stats_success = 1;
}

message SlaveLoc {
  string sid = 1;
  double longitude = 2;
  double latitude = 3;
}

message MasterOrder {
  string mid = 1;
  string master_order = 2;
}

message TicketRangeSid {
  string sid = 1;
}

message TicketRange {
  int64 ticket_id_start = 1;
  int64 ticket_id_end = 2;
}
